tests/files/invalid_blendfiles/invalid_sdna_struct_size.blend
version https://git-lfs.github.com/spec/v1
oid sha256:5fc25b2d8c8a0fd04b7e149e04e3565bfecdf08b474dd2bd55a9e340b860f94c
size 81175
